New navigation bar and style

--- a/style.css
+++ b/style.css
@@ -1,36 +1,35 @@
-body, html {
-    height: 100%;
-    margin: 0;
-    font-family: Arial;
-  }
+<style>
+body {
+  margin: 0;
+}
 
-  .menu {
-    background-color: #566573;
-    color: white;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    font-size: 17px;
-    width: 25%;
-    color: #1C2833;
-  }
-  
+.topnav {
+  overflow: hidden;
+  background-color: #34495E;
+}
 
-  .menu:hover {
-    background-color: #777;
-  }
-  
+.topnav a {
+  float: left;
+  color: #ffF;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-  .contentmenu {
-    color: #1C2833;
-    display: none;
-    padding: 100px 20px;
-    height: 100%;
-  }
+.topnav a:hover {
+  background-color: #517294;
+}
+
+.topnav a.active {
+  background-color: #e61c66;
+  color: white;
   
-  #Home {background-color: #85C1E9;}
-  #News {background-color: #76D7C4  ;}
-  #Contact {background-color: #C39BD3;}
-  #About {background-color: #F8C471;}
+}
+
+/* Style the active class, and buttons on mouse-over */
+.active, .btn:hover {
+  background-color: #666;
+  color: white;
+}
+</style>
