--- a/style.css
+++ b/style.css
@@ -1,74 +1,150 @@
-*
-{
-  box-sizing: border-box;
+*{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-
-.topnav {
+nav{
+  background: #353535;
+  padding: 5px 40px;
+}
+nav ul{
+  list-style: none;
   display: flex;
-  overflow: hidden;
-  background-color: #34495E;
   flex-wrap: wrap;
-  align-items: center ;
-  justify-content: center;
-
+  justify-content: space-around;
 }
 
-.topnav li a {
-  display: block;
-  padding: 15px 15px;
-  position:relative;
+nav ul li{
+  padding: 15px 20px;
+  cursor: pointer;
 }
 
-.topnav li.submenu a {
-  padding: 15px 15px;
-}
-
-.btn {
-  overflow: hidden;
-  background-color: #e61c66;
-}
-
-.topnav a {
-  color: #ffF;
+.item 
+{
+  position: relative;
+  width: auto;
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
 }
 
-.topnav a:hover {
-  background-color: #517294;
+.sub-item{
+  position: static;
+  width: 200px;
+  text-align: center;
+} 
+
+.sub-item li{
+  margin-top: 10px;
 }
 
-.topnav a.active {
-  background-color: #e61c66;
-  color: white;
-  display: block;
-  
-}
-
-.active, .btn:hover {
-  background-color: #666;
-  color: white;
-}
-
-li {
-  display: inline;
-}
-
-
-.submenu{
-  display: none;
-  background-color: #34495E;
+.item:after 
+{
   position: absolute;
+  content: '';
+  height: 2px;
+  width: 100%;
+  background: #eb0165;
+  left: 0;
+  bottom: 5px;
+  opacity: 0;
+  transition: all 0.2s linear;
+ 
+}
+
+.item:hover:after{
+  opacity: 1;
+  bottom: 8 px;
+}
+
+.logo{
+  color: white;
+  flex: 1;
+  font-size: 30px;
+  font-weight: 500;
+  cursor: default;
+  user-select: none; 
+  }
+
+nav ul li a{
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  transition: .4s;
+}
+.item:hover a{
+  color: #eb0165;
+}
+
+.sub-item:hover li{
+  color: #eb0165;
+}
+
+nav ul li ul a{
+  font-size: 15px;
+}
+
+nav ul li i{
+  font-size: 23px;
+}
+
+.toggle{
+ opacity: 0;
+}
+
+/* Mobile menu */
+@media only screen and (max-width: 900px){
+  nav{
+    padding: 5px 30px;
+  }
+
+  .toggle{
+    opacity: 1;
+    order: 1;
+  }
+
+  nav ul li.item{
+    width: 100%;
+    order:2;
+    display: none;
+  }
+
+  nav ul li.sub-item{
+    width:100%;  
+    order:2;
+    display: none;
+  }
+
+  .active .item {
+    display: block;
+}
+
+  .active .sub-item {
+    display: block;
+}
+
+  .menu .item:hover{
+    border-radius: 5px;
+    box-shadow: inset 0 0 5px #eb0165,
+                inset 0 0 5px #eb0165;
+  }
+
+ .menu .item:hover:after{
+    opacity: 0;
+  }
 
 }
 
-.submenu-item:hover .submenu{
-  display: block;
-  justify-content: left;
-}
+/* Submenu*/
 
+.menu li:hover .submenu {
+  display: flex;
+  flex-direction: column;
+  max-height: 200px;
+}
+.submenu a:hover {
+  background-color: #666;
+}
+.submenu {
+  overflow: hidden;
+  max-height: 0; 
+} 
